fix crash when list of files to decrypt is empty

This happens when the last file in the list would overwrite an existing file and instead of overwriting the decryption of that file was skipped.

FIXED-IN:4.8.2
BUG:294641